Version 3.8153 (July 30th 2017)
- Fixed: Camera Editor, will now always refresh thumbnail in table
- Fixed: Devices could become invisible when a scene/group was added to the 'hidden devices' room plan with the same idx
- Fixed: JSon float/nan value, solved by upgrading JSonCPP
- Fixed: OZW, when a value is updated and the sensor did not exists before (for example a kWh sensor), it is created (saves a restart)
- Fixed: Daemonize compatible with Systemd forking type
- Changed: Blinds T5 till T13 new DeviceID generation, could cause new sensors
- Changed: Lessen rounding errors for computed energy
- Changed: Minimized On/Off/Script execution time
- Changed: SolarEdgeAPI, now only needs API Key
- Changed: Support symlinks for plugin and theme directories
- Changed: Switch type 'Door Lock' renamed to 'Door Contact'
- Changed: Temperature Only charts will not display the Humidity axis
- Changed: Wind Direction Graph, if sensor does not supports 'Gust', the 'Speed' value is used
- Changed: Updated OpenZWave (and configuration files)
- Implemented: Added a new parameter to disable the logging of event script triggers 'Script event triggered: ...'
- Implemented: AppLamp/LimitLess bridge V6.0 RGBW/RGBWW
- Implemented: Blinds T1 till T13 new supports the Stop button
- Implemented: Blockly/Lua Set SetPoint option
- Implemented: Devices, Log icon for Blinds
- Implemented: Dummy Hardware, Temp+Baro
- Implemented: Estonian Language support (big thanks to Kuido)
- Implemented: EvohomeWeb support (Thanks to Gordon3!)
- Implemented: General/Text sensor now able to be shared
- Implemented: I2C BME280 sensor (temp+hum+baro)
- Implemented: I2C for non arm systems
- Implemented: InfluxDB Data push
- Implemented: Latvian Language support (big thanks to Edgars)
- Implemented: Netatmo Home Coach support
- Implemented: Notification for Dummy Soil/Moisture sensor
- Implemented: Notification for Dummy Temp/Hum/Baro sensor
- Implemented: Notification for Alert Sensor via udevice JSON call