@@ -1,3 +1,6 @@
+Version 3.xxx (August xxth 2017)
+- Implemented: Pusher now supports Distance type
+
 Version 3.8153 (July 30th 2017)
 - Fixed: Camera Editor, will now always refresh thumbnail in table
 - Fixed: Devices could become invisible when a scene/group was added to the 'hidden devices' room plan with the same idx
